feat: Sistema de autenticação corrigido e testes completos implementados
🔧 Correções no Sistema de Autenticação:
- Corrigido enum UserRole (1=Admin, 2=Editor, 3=Viewer)
- Corrigido LoginResponse (Token → AccessToken)
- Adicionado endpoint RegisterFirstAdmin para criação inicial
- Melhorado tratamento de erros com logs detalhados
- Corrigidas configurações JWT (Issuer, Audience)
- Corrigidos avisos de compilação (nullable references)

🧪 Scripts de Teste e Validação:
- Criado fix-user-data.sql para correção de dados
- Criado test-auth-fix.sh para testes automatizados
- Criado test-services.sh para verificação de serviços
- Criado test-password-hash.cs para debug de senhas

📱 Configuração para Acesso Mobile:
- API configurada para aceitar conexões externas (0.0.0.0:3003)
- Frontends testados e funcionando em dispositivos móveis
- Documentação de acesso mobile criada

📋 Documentação e Especificações:
- Especificação completa de correção do sistema auth
- Manual de passos para execução e testes
- Guias de troubleshooting e verificação
- Checklists para testes de integração

🚀 Melhorias na API:
- Logs detalhados para debugging
- Middleware de autenticação otimizado
- Tratamento robusto de erros
- Configurações de desenvolvimento aprimoradas

✅ Status: Todos os serviços testados e funcionando
- API: http://localhost:3003/swagger
- AdminDashboard: http://localhost:3000
- PublicWebsite: http://localhost:3001

--- a/src/Backend/Batuara.API/appsettings.json
+++ b/src/Backend/Batuara.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=batuara_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=CasaBatuara;Username=postgres;Password=@5ST73EA4x"
   },
   "JwtSettings": {
     "Secret": "your-256-bit-secret-key-here-at-least-32-characters",
@@ -69,7 +69,9 @@
   "CorsSettings": {
     "AllowedOrigins": [
       "http://localhost:3000",
-      "http://localhost:3001"
+      "http://localhost:3001",
+      "http://localhost:3003"
     ]
-  }
+  },
+  "Urls": "http://0.0.0.0:3003"
 }
