--- a/src/Frontend/PublicWebsite/package.json
+++ b/src/Frontend/PublicWebsite/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
