fix: Remover pasta build do repositório e atualizar .gitignore
- Adicionada regra build/ no .gitignore
- Removidos arquivos de build do controle de versão
- Pasta build deve ser gerada localmente com 'npm run build'
- Corrige problema de ausência de index.html para novos desenvolvedores

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ bower_components
 # Compiled binary addons
 build/Release
 
+# React build output
+build/
+
 # Dependency directories
 jspm_packages/
 
