fix: adicionar arquivos essenciais que estavam sendo ignorados
- Corrigir .gitignore para permitir pasta public/ e Dockerfile*
- Adicionar Dockerfile.frontend para build do PublicWebsite
- Adicionar todos os assets necessários (favicon, logo, bg.jpg)
- Incluir arquivos public/ de ambos os frontends

--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public - COMENTADO para permitir assets do React
 
 # Storybook build outputs
 .out
@@ -171,7 +171,7 @@ TestResults/
 
 # Docker
 .dockerignore
-Dockerfile*
+# Dockerfile* - COMENTADO para permitir Dockerfiles do projeto
 
 # Backup files
 *.bak
