--- a/src/Frontend/AdminDashboard/package.json
+++ b/src/Frontend/AdminDashboard/package.json
@@ -50,7 +50,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.1"
+    "@testing-library/user-event": "^14.5.1",
+    "sass": "^1.90.0"
   },
   "proxy": "http://localhost:3003"
 }
