fix: configurar deploy automático para OCI
- Atualizar .env.production com senha correta do banco
- Simplificar docker-compose.yml para usar apenas frontends
- Configurar REACT_APP_API_URL para ambiente OCI
- Remover dependências de API e banco do docker-compose
- Preparar para deploy automático com oracle-deploy-ready.sh

--- a/.env.production
+++ b/.env.production
@@ -1,17 +1,13 @@
-# Configuração de Portas
+# Configuração para Oracle Cloud Infrastructure
+DB_PASSWORD=@5ST73EA4x
+VITE_API_BASE_URL_TEST=http://localhost
+COMPOSE_PROJECT_NAME=batuara
+ENVIRONMENT=production
+
+# Configurações das portas
 PUBLIC_WEBSITE_PORT=3000
 ADMIN_DASHBOARD_PORT=3001
 API_PORT=8080
 
-# Configuração da API
+# Configurações específicas para OCI
 REACT_APP_API_URL=http://localhost:8080
-VITE_API_BASE_URL_TEST=http://localhost:8080
-
-# Database (quando necessário)
-DB_PASSWORD=batuara_secure_password_2024
-
-# Ambiente
-ENVIRONMENT=production
-
-# Configurações opcionais
-COMPOSE_PROJECT_NAME=batuara
