Improve: Sistema de gerenciamento de serviços otimizado
- Atualizado manage-services.ps1 para iniciar serviços em segundo plano
  * Usa Start-Process para liberar o terminal
  * Verifica automaticamente se os serviços iniciaram
  * Feedback detalhado do status de inicialização

- Criado start-background.ps1 como alternativa com PowerShell Jobs
  * Método alternativo para iniciar em background
  * Mais leve e rápido para alguns cenários

- Atualizados scripts npm no package.json:
  * npm run start:bg: Iniciar em segundo plano
  * npm run stop/status/restart: Comandos diretos
  * npm run services: Menu interativo
  * npm run kill-ports: Limpar portas

- Corrigidos caminhos de diretórios (public-website  PublicWebsite)
- Sistema testado e validado no Windows

Funcionalidades:
 Inicialização em segundo plano (terminal livre)
 Verificação automática de status
 Múltiplas opções de inicialização
 Gerenciamento completo via scripts npm
 Interface amigável para desenvolvimento

--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -12,6 +12,7 @@
     "status": "powershell -ExecutionPolicy Bypass -File manage-services.ps1 status",
     "restart": "powershell -ExecutionPolicy Bypass -File manage-services.ps1 restart",
     "services": "powershell -ExecutionPolicy Bypass -File manage-services.ps1",
+    "start:bg": "powershell -ExecutionPolicy Bypass -File start-background.ps1",
     "build:all": "cd PublicWebsite && npm run build && cd ../AdminDashboard && npm run build",
     "test:all": "cd PublicWebsite && npm test && cd ../AdminDashboard && npm test"
   },
