fix: corrigir problemas no GitHub Actions e docker-compose.yml
- Atualizar versão do docker-compose de 3.8 para 3.3 para compatibilidade
- Corrigir contextos de build dos serviços frontend (public-website e admin-dashboard)
- Corrigir caminhos dos Dockerfiles nos serviços
- Corrigir dependência do job deploy-to-oci para referenciar build-and-test
- Automatizar deploys via git push

--- a/.github/workflows/deploy-oci.yml
+++ b/.github/workflows/deploy-oci.yml
@@ -129,7 +129,7 @@ jobs:
         platforms: linux/amd64
 
   deploy-to-oci:
-    needs: build-images
+    needs: build-and-test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
     
