--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 # Docker Compose para desenvolvimento local
 # Para produção, use: docker-compose -f scripts/docker/docker-compose.production.yml
@@ -6,8 +6,8 @@ version: '3.8'
 services:
   public-website:
     build:
-      context: ./src/Frontend/PublicWebsite
-      dockerfile: ../../../Dockerfile.frontend
+      context: .
+      dockerfile: Dockerfile.frontend
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:8080}
     container_name: batuara-public-website
@@ -29,8 +29,8 @@ services:
 
   admin-dashboard:
     build:
-      context: ./src/Frontend/AdminDashboard
-      dockerfile: ../../../Dockerfile.frontend
+      context: .
+      dockerfile: Dockerfile.frontend
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:8080}
     container_name: batuara-admin-dashboard
