chore: sync repo before api foundation phase

--- a/src/Backend/Batuara.API/appsettings.json
+++ b/src/Backend/Batuara.API/appsettings.json
@@ -55,7 +55,11 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
   "SecuritySettings": {
     "PasswordRequirements": {
@@ -70,7 +74,10 @@
     "AllowedOrigins": [
       "http://localhost:3000",
       "http://localhost:3001",
-      "http://localhost:3003"
+      "http://localhost:3003",
+      "http://172.17.144.113:3000",
+      "http://172.17.144.113:3001",
+      "http://172.17.144.113:3003"
     ]
   },
   "Urls": "http://0.0.0.0:3003"
