--- a/src/Backend/Batuara.Auth/appsettings.json
+++ b/src/Backend/Batuara.Auth/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CasaBatuara;Username=postgres;Password=@5ST73EA4x"
+    "DefaultConnection": "Host=172.20.0.2;Port=5432;Database=batuara_db;Username=batuara_user;Password=batuara123"
   },
   "JwtSettings": {
     "Secret": "your-256-bit-secret-key-here-at-least-32-characters",
@@ -71,5 +71,40 @@
       "http://localhost:3000",
       "http://localhost:3001"
     ]
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [],
+    "EndpointWhitelist": [],
+    "ClientWhitelist": [],
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/api/auth/login",
+        "Period": "1m",
+        "Limit": 5
+      },
+      {
+        "Endpoint": "*:/api/auth/refresh",
+        "Period": "1m",
+        "Limit": 10
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 100
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1h",
+        "Limit": 1000
+      }
+    ]
+  },
+  "IpRateLimitPolicies": {
+    "IpRules": []
   }
 }
